Update DonorController.java